--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
-logo: //q.qlogo.cn/qqapp/100229475/2229ECE6C6AA666326E6E67A8B541781/160
+logo_small: //q.qlogo.cn/qqapp/100229475/2229ECE6C6AA666326E6E67A8B541781/40
+logo: //q.qlogo.cn/qqapp/100229475/2229ECE6C6AA666326E6E67A8B541781/240
 
 github: https://github.com/lingmm
 
 disqus: shyling
 
 ga: UA-96993727-1
+
+links:
+  link: 'links'
+  about: 'about'
